--- a/Remerciements.tex
+++ b/Remerciements.tex
@@ -3,22 +3,27 @@
 Je tiens tout d'abord à remercier mes directeurs de thèse, M. François Molino, M. Stéphane
 Chemouny et M. Alain Bonafé, pour m'avoir guidé, encouragé, conseillé, tout en me laissant une
 grande liberté et en me faisant l'honneur de me déléguer plusieurs responsabilités dont j'espère avoir
-été à la hauteur.\\
+été à la hauteur.
+
 Mes remerciements vont également à Mme Emmanuelle Le Bars et M. Nicolas Menjot de
 Champfleur, pour leur gentillesse et la patience qu'ils ont manifesté à mon égard durant cette thèse.
-Sans eux ma thèse n’aurait pas pu avoir lieu !\\
+Sans eux ma thèse n’aurait pas pu avoir lieu !
+
 Je remercie Mme Agnès Malgouyres et Siemens pour leur aide dans la compréhension des
 données brutes IRM, et les séminaires auxquels j’ai pu être convié lors desquels j’ai énormément
-appris.\\
+appris.
+
 Je remercie M. Mokhtar Zagzoule, M. Patrice Mollard, M. Christophe Goze-Bac, M. Alexandre
 Krainik et M. Emmanuel Barbier pour m'avoir fait l'honneur de participer au Jury de soutenance.
 Bien entendu je remercie également ma famille et tous ceux qui m’ont soutenu durant ces
-trois ans !\\
+trois ans !
+
 Enfin comment ne pas remercier tous ces avatars que j’ai pu croiser dans la salle de recherche
 ... R3d Is De4d (Cyril), nsilace (Nicolas), I am Batman (Joris), Mat (Mathieu), JetSki (Liesjet), Fleur (Naïla),
 Wazaaa (vincent !), Saleté de Machine (Anthony), MrCool dit DedeLeFada (Jérôme), vivi (Vivien),
 GRADUR (Jonathan) et à toutes ces personnes anonymes ayant participé sans prendre de pseudo !
 Mention spéciale à Bullatore/Velocyraptore (Céline) qui a supporté mes cris de rage quand je perdais
 durant ces 3 ans et Gordita dit Daddy plus connu sous le nom de BeeGees (much trololo, Victor) à toi
-j’ai envie de te dire « oh ouaiiiiiiiisss ».\\
+j’ai envie de te dire « oh ouaiiiiiiiisss ».
+
 Sans vous la thèse aurait eu le même contenu, mais certainement pas la même saveur !
