--- a/Chapitre3.tex
+++ b/Chapitre3.tex
@@ -228,8 +228,8 @@ Pour les veinules, nous n’avons pas l’information de densité. Le volume est
 avec $V_a$ et $V_c$ les solutions de~\ref{eq:volumesac}, et les volumes de référence toujours donnés par la littérature.
 De même la longueur totale entre artères et veines est subdivisée en trois longueurs (artérioles, capillaires, veinules) sur la base des proportions fournit par la littérature (\cite{Zagzoule1986}). En l’état, faute d’informations structurales complémentaires, nous n’utilisons pas de facteurs géométriques correctifs supplémentaires (de type dimensions fractales), pour tenir compte du caractère ramifié de cette partie de la structure. 
 A partir des volumes et des longueurs de chaque compartiment, les rayons sont déterminés simplement (Équation~\ref{eq:rayons}). 
-Les rayons moyens des différents compartiments peuvent être visualisés (Figure~\ref{fig:2_13_profil_rayons}) et leur différences relatives mis en comparaisons aux données de la littérature (par exemple dans le chapitre suivant figure~\ref{fig:4_3_zagzoule}). Par ailleurs, les données quantitative illustrées dans le Tableau~\ref{tab:tab_profil_rayons} montrent des longueurs du même ordre de grandeur (bien que souvent plus élevés dans le modèle de Zagzoule et al.). On voit ainsi que des artères aux veines, les proportions des caractéristiques des différents tubes sont comparables. \\
- La comparaison de nos mesures aux données de BraVa (voir Chapitre~\ref{sec:anat_art}) permet d'évaluer l'écart de notre modèle à des données similaires. Le résultat met en évidence un nombre inférieur de moitié en terme de branches de notre méthode en rapport de BraVa. Au vue de l'approche manuelle privilégiée par ce dernier ce résultat est cohérent. La longueur moyenne des segments en revanche est similaire, bien que des écarts peuvent exister du fait de l'écart précédement décrit. Les informations sur les calibres des vaisseaux ne sont cependant pas disponibles. \\
+Les rayons moyens des différents compartiments peuvent être visualisés (Figure~\ref{fig:2_13_profil_rayons}) et leur différences relatives mis en comparaisons aux données de la littérature (par exemple dans le chapitre suivant figure~\ref{fig:4_3_zagzoule}). Par ailleurs, les données quantitative illustrées dans le Tableau~\ref{tab:tab_profil_rayons} montrent des longueurs du même ordre de grandeur (bien que souvent plus élevés dans le modèle de Zagzoule et al.). On voit ainsi que des artères aux veines, les proportions des caractéristiques des différents tubes sont comparables. 
+ La comparaison de nos mesures aux données de BraVa (voir Chapitre~\ref{sec:anat_art}) permet d'évaluer l'écart de notre modèle à des données similaires. Le résultat met en évidence un nombre inférieur de moitié en terme de branches de notre méthode en rapport de BraVa. Au vue de l'approche manuelle privilégiée par ce dernier ce résultat est cohérent. La longueur moyenne des segments en revanche est similaire, bien que des écarts peuvent exister du fait de l'écart précédement décrit. Les informations sur les calibres des vaisseaux ne sont cependant pas disponibles. 
 Pour la microcirculation, les calculs sont ici cohérents avec les données de~\cite{Moody2004}. On retrouve donc naturellement les densités de longueur de l'ordre de 500 mm/mm$^3$ pour les plus petits vaisseaux. Comme on l'a déja remarqué dans le paragraphe~\ref{sect:microcirculation}, cela implique de l'ordre de 400 capillaires en parallèle par mm$^3$, soit perpendiculairement à une section de 1 mm$^2$. Pour le cerveau entier, on aboutit alors à des chiffrers de l'ordre de 10$^7$ capillaires en parallèle, chiffre bien supéreiurs aux espimations de~\cite{Zagzoule1986} (environ 2 10$^5$). Cependant, ces estimations antérieures n'étaient basées que sur des lois se progression géométrique du nombre de branches dans le réseau ramifié, sans validation expérimentale à l'époque. {\em In fine}, le caractère simplifié de l'ensemble de ce calcul emp\^eche largement d'utiliser avec confiance nos chiffre pour des modélisations hydrodynamiques détaillées. La résistance hydrodynamique {\em globale} de ces comprtiments devra être un des paramètres estimés de la simulation.
 %%%
 \begin{table}
