update corrections formules et qques erreurs

--- a/Chapitre6.tex
+++ b/Chapitre6.tex
@@ -17,7 +17,8 @@ Nous allons passer en revue les méthodes d’acquisition et de quantification d
 \section{Acquisition}
 Du point de vue de l’acquisition les différentes méthodes disponibles se distinguent par le décours de la cinétique du marquage des protons. On distingue principalement des techniques de marquage continu (CASL) et le marquage pulsé (PASL).
 
-Présentons tout d’abord le marquage continu (CASL). Cette méthode développée par Williams et collaborateurs en 1992  (\cite{Detre1992},~\cite{Williams1992}) consiste à appliquer une impulsion radiofréquence pendant 2 à 4 secondes de façon continue au niveau du plan de marquage, lors de l’application d’un gradient de champs magnétique dans la direction du flux (\cite{Ferre2011}). L’image obtenue dispose d’un haut rapport signal sur bruit mais a en contrepartie deux inconvénients inhérents au marquage continu. Ces inconvénients sont d’une part la présence d’un transfert d’aimantation (MT) et d’autre part un dépôt d’énergie plus important dans les tissus. Le transfert d’aimantation correspond à une contamination du signal au voisinage des protons marqués et va avoir pour conséquence de réduire ce signal et donc d’affecter la mesure de débit, mais aussi de complexifier l’acquisition d’images multi-coupes. Pour limiter ce phénomène spécifique à l’image marquée, un marquage distal est réalisé dans l’acquisition contrôle elle-même afin d’y produire le même effet de transfert d’aimantation.
+Présentons tout d’abord le marquage continu (CASL). Cette méthode développée par Williams et collaborateurs en 1992  (\cite{Detre1992},~\cite{Williams1992}) consiste à appliquer une impulsion radiofréquence pendant 2 à 4 secondes de façon continue au niveau du plan de marquage, lors de l’application d’un gradient de champs magnétique dans la direction du flux (\cite{Ferre2011}). L’image obtenue dispose d’un haut rapport signal sur bruit mais a en contrepartie deux inconvénients inhérents au marquage continu. Ces inconvénients sont d’une part la présence d’un transfert d’aimantation (MT) et d’autre part un dépôt d’énergie plus important dans les tissus. Le transfert d’aimantation correspond à une contamination du signal dans la zone d'acquisition par le fait que l'impulsion RF de marquage hors résonance des protons libres, n'est pas hors résonance vis à vis des protons liés qui possèdent un spectre plus large. Cette magnétisation peut se transférer aux protons libres et ainsi contaminer les mesures. Pour limiter ce phénomène spécifique à l’image marquée, un marquage distal est réalisé dans l’acquisition contrôle elle-même afin d’y produire le même effet de transfert d’aimantation.
+%%Le transfert d’aimantation correspond à une contamination du signal au voisinage des protons marqués et va avoir pour conséquence de réduire ce signal et donc d’affecter la mesure de débit, mais aussi de complexifier l’acquisition d’images multi-coupes. 
 
 Pour réduire la durée d’application des impulsions, une nouvelle approche a récemment été développée, l’ASL pseudo-continu (pCASL). A la place d’une seule et longue impulsion, 1000 impulsions ou plus sont appliquées à une fréquence d’une impulsion par milliseconde (\cite{Dai2008}). Le marquage est aussi long que dans la méthode continue, mais conduit à une bien meilleure efficacité par réduction de des effets de transfert d’aimantation, le tout en étant compatible avec les systèmes modernes d’antennes. C’est à l’heure actuelle la séquence recommandée en imagerie clinique(\cite{Alsop2014}) bien qu’elle ne soit pas, pour le moment, fournie en version « standard » par tous les constructeurs.
 
